--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -73,8 +73,25 @@
     <string name="pref_multipleRunning_summary_on">More than one task can be running at a time</string>
     <string name="pref_multipleRunning_summary_off">Only one task can be running at a time</string>
     
+    <string name="pref_autosaveRate">Autosave rate</string>
+    <string name="pref_autosaveRate_default">5</string>
+    <string-array name="pref_autosaveRate_entries">
+        <item>1 minute</item>
+        <item>5 minutes (default)</item>
+        <item>10 minutes</item>
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+    </string-array>
+    <string-array name="pref_autosaveRate_values">
+        <item>1</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+    </string-array>
+    
     <string name="pref_foregroundRate">Foreground update rate</string>
-    <string name="pref_foregroundRate_default">0</string>
+    <string name="pref_foregroundRate_default">1</string>
     <string-array name="pref_foregroundRate_entries">
         <item>1 second (default)</item>
         <item>5 seconds</item>
@@ -93,7 +110,7 @@
     </string-array>
     
     <string name="pref_backgroundRate">Background update rate</string>
-    <string name="pref_backgroundRate_default">4</string>
+    <string name="pref_backgroundRate_default">30</string>
     <string-array name="pref_backgroundRate_entries">
         <item>1 second</item>
         <item>5 seconds</item>
