beginnings of the real task edit dialog

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -140,6 +140,8 @@
     <string name="task_goal">Goal</string>
     <string name="task_indefinite">Indefinite</string>
     <string name="task_progress">Progress</string>
+    <string name="task_group">Group</string>
+    <string name="task_position">Position</string>
     
     <string name="task_start">Start</string>
     <string name="task_pause">Pause</string>
