addded description field to task edit dialog

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -142,6 +142,7 @@
     <string name="task_progress">Progress</string>
     <string name="task_group">Group</string>
     <string name="task_position">Position</string>
+    <string name="task_description">Description</string>
     
     <string name="task_start">Start</string>
     <string name="task_pause">Pause</string>
