implemented task goal reaching alert, finished timer stuff (i think)

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -182,6 +182,7 @@
     
     <!-- General strings -->
     <string name="no_tasks">No tasks</string>
+    <string name="task_goal_reached">Task \"%s\" has reached its goal</string>
     
     
     <!--  View tag IDs -->
