--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="menu_new_task">New Task</string>
     <string name="menu_new_group">New Group</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_about">About</string>
     <string name="menu_exit">Exit</string>
     
     
@@ -79,6 +78,16 @@
     <string name="pref_goalNotification_summary_off">A notification will not be made when a task reaches its goal</string>
 
     <string name="pref_notificationSound">Notification sound</string>
+
+    <string name="pref_about">About</string>
+
+    <string name="pref_aboutApp">About Task Timer</string>
+
+    <string name="pref_playStore">Play Store item</string>
+    <string name="pref_playStore_summary">View the app in the Google Play Store</string>
+
+    <string name="pref_allApps">Other apps</string>
+    <string name="pref_allApps_summary">View the other apps made by the author</string>
     
     <!--  Task strings -->
     <string name="task_name">Name</string>
